fixed spacing issues

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -54,7 +54,7 @@
 
 @media screen and (max-width: 768px) {
   .about {
-    padding: 130px 30px;
+    padding: 90px 30px;
   }
 
   .about .about__wrapper {
