--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -128,7 +128,7 @@
 
 @media screen and (max-width: 768px) {
   .contact {
-    padding: 100px 30px;
+    padding: 70px 30px;
   }
 
   .contact .contact__heading {
