--- a/src/Components/ProjectDemo/ProjectDemo.css
+++ b/src/Components/ProjectDemo/ProjectDemo.css
@@ -33,7 +33,7 @@
 
 @media screen and (max-width: 768px) {
   .projectdemo {
-    padding: 130px 30px;
+    padding: 90px 30px;
   }
 
   .projectdemo .projectdemo__heading {
