--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -75,7 +75,7 @@
 
 @media screen and (max-width: 768px) {
   .skills {
-    padding: 50px 30px;
+    padding: 30px;
     background-color: var(--light-bg);
   }
 
